fixed checkstyle warnings